# khoji

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: clip_rsicd_full.yaml  clip_rsicd_overfit.yaml  fiqa_conservative.yaml  fiqa_full.yaml  fiqa_full_finetune.yaml  fiqa_mining_test.yaml  fiqa_mixed.yaml  fiqa_overfit.yaml  fiqa_quick.yaml  flickr30k_full.yaml  flickr30k_mixed.yaml  flickr30k_overfit.yaml  flickr30k_quick.yaml  minilm_fiqa_mixed_2rounds.yaml  minilm_scifact_full.yaml  minilm_scifact_overfit.yaml  rsicd_full.yaml  rsicd_mixed.yaml  rsicd_overfit.yaml  rsicd_quick.yaml
notebooks/: 01_text_retrieval_scifact.ipynb  02_crossmodal_retrieval_rsicd.ipynb  03_custom_data_pipeline.ipynb
scripts/: demo_finetuning.py  eval_adapter_comparison.py  train_composed_retrieval.py  train_composed_retrieval_api.py  train_multimodal_retrieval.py  train_text_retrieval.py
scripts/fashioniq/: download_data.py  train.py
src/khoji/: __init__.py  composed_config.py  composed_data.py  composed_dataset.py  composed_evaluator.py  composed_run.py  composed_trainer.py  config.py  data.py  dataset.py  device.py  evaluator.py  example_configs.py  image_utils.py  lora.py  loss.py  metrics.py  model.py  multimodal_config.py  multimodal_data.py  multimodal_dataset.py  multimodal_evaluator.py  multimodal_model.py  multimodal_run.py  multimodal_trainer.py  run.py  trainer.py
tests/: test_composed.py  test_config.py  test_custom_dataset.py  test_data.py  test_device.py  test_evaluator.py  test_integration.py  test_lora.py  test_loss.py  test_metrics.py  test_model.py  test_multimodal.py  test_trainer.py
